--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beta_projeto_parnaso",
+  "name": "parnaso-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,8 +13,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^10.8.0",
-    "recharts": "^2.12.0",      <--- ADICIONE ESTA LINHA COM A VÍRGULA NO FINAL
-    "lucide-react": "^0.344.0", <--- RECOMENDO ADICIONAR ESTA TAMBÉM (Ícones)
+    "recharts": "^2.12.0",
+    "lucide-react": "^0.344.0",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.0",
     "vite": "^5.0.0"
   },
   "devDependencies": {
